# strata

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
crates/strata-app/: Cargo.toml  README.md  tauri.conf.json
crates/strata-app/capabilities/: default.json
crates/strata-app/icon-mockups/: index.html
crates/strata-app/icons/: icon.icns
crates/strata-app/src/: commands.rs  fs_watcher.rs  main.rs  permissions.rs  persist.rs  scan_runner.rs  volumes.rs
crates/strata-app/ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/strata-app/ui/src/: app.tsx  colors.ts  ipc.ts  main.ts  types.ts  version.ts
crates/strata-app/ui/src/components/: breadcrumb.tsx  cloud-badge.tsx  details-panel.tsx  filters-section.tsx  hover-peek.tsx  onboarding.tsx  progress-bar.tsx  quick-picker.tsx  scanning-state.tsx  sidebar.tsx  snapshot-treemap.tsx  stat-row.tsx  toggle.tsx  volumes-section.tsx
crates/strata-app/ui/src/stores/: filters.ts  selection.ts
crates/strata-app/ui/src/viz/: canvas.ts  hierarchy.ts  hit-test.ts  layout-grid.ts  layout-sunburst.ts  layout-treemap.ts  morph.ts  render.ts  viz.tsx
crates/strata-scan/: Cargo.toml  README.md
crates/strata-scan/src/: aggregate.rs  hasher.rs  icloud.rs  junk.rs  lib.rs  main.rs  model.rs  output.rs  progress.rs  spotlight.rs  timemachine.rs  walker.rs
crates/strata-scan/tests/: aggregate_test.rs  cli_test.rs  hasher_test.rs  icloud_test.rs  junk_test.rs  model_test.rs  output_test.rs  snapshot_test.rs  spotlight_test.rs  timemachine_test.rs  walker_test.rs
docs/images/: README.md
docs/superpowers/plans/: 2026-04-27-plan-1-scanner-core.md  2026-04-27-plan-2-tauri-shell-and-viz.md  2026-04-27-plan-3-ui-shell.md
docs/superpowers/specs/: 2026-04-27-qdisk-design.md
