[package]
name = "strata-app"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Strata — beautiful macOS disk-space viewer."

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
strata-scan = { path = "../strata-scan" }
anyhow = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "strata-app"
path = "src/main.rs"
