[package]
name = "strata-app"
version = "0.3.10"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Strata — beautiful macOS disk-space viewer."

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
strata-scan = { path = "../strata-scan" }
anyhow = "1"
sysinfo = { version = "0.32", default-features = false, features = ["disk"] }
trash = "5"
notify = "6"
libc = "0.2"

[features]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "strata-app"
path = "src/main.rs"
